<resources>
    <string name="app_name">MCCP2</string>
    <string name="splash_header">MCCP - Phase 2</string>
    <string name="fill_form">Fill Survey Form</string>
    <string name="edit_forms">Edit Stored Form</string>
    <string name="sync_forms">Sync Stored Forms</string>
    <string name="delete_forms">Delete Stored Forms</string>
    <string name="MCCP2_label">MCCP2</string>
    <string name="MC_101TIME"> انٹرویو کا وقت </string>
    <string name="MC_101"> انٹرویو کی تاریخ </string>
    <string name="MC_103"> ٹا وُن - تحصیل  کا نام اور کوڈ </string>
    <string name="MC_104">یونین کونسل کا نام اور کوڈ</string>
    <string name="MC_105">کلسٹر</string>
    <string name="MC_106">گھرانہ نمبر  لسٹنگ شیٹ سے لکھیں</string>
    <string name="MC_Yes">ہاں</string>
    <string name="MC_No">نہیں</string>
    <string name="MC_107">کیادروازے پرِای -پی-آئی کا مخصوص نشان موجود ہے؟</string>
    <string name="MC_108inst">ہدایت: اپنا تعارف کرو ائیں اور اپنے آنے کا مقصد بیان کر  یں۔ انٹر ویو شروع کر نے سے پہلے زبانی اجازت لیں۔  اگر اجازت نہ ملے تو  انٹرویو   نہ لیں  اور  ہدايات کے مطابق اگلے گھر جائیں۔</string>
    <string name="MC_108">کیا اجازت مل گئی؟</string>
    <string name="MC_108_Close">گھر بند ہے - اجازت دینے والا موجود نہیں ہیں</string>
    <string name="MC_Unclear">واضح  نہیں</string>
    <string name="end_interview">اختتام</string>
    <string name="start_interview">انٹرویو شروع کریں</string>
    <string name="MC_109">انٹرویو کا نتیجہ </string>
    <string name="MC_109_complete"> مکمل </string>
    <string name="MC_109_incomplete"> نامکمل </string>
    <string name="MC_109_noQ"> سوالنامہ نہیں بھراگیا </string>
    <string name="MC_110">اگر انٹرویو نامکمل ہو تو وجہ بیان کریں</string>
    <string name="MC_110_1"> انٹرویو کے دوران منع کر دیا  </string>
    <string name="MC_110_2"> گهر بند تھا </string>
    <string name="MC_110_3"> بالغ جوابدہندہ موجود نہیں تھا  </string>
    <string name="MC_110_4"> اجازت دینے والا موجود نہیں ہے </string>
    <string name="MC_110_88"> دیگر </string>
    <string name="MC_110X">انٹرویو نامکمل ہونے کی دیگر وضاحت کریں</string>
    <string name="MC_201NM">جوابدہندہ کا  نام </string>
    <string name="MC_201GNDR">جوابدہندہ کی جنس</string>
    <string name="MC_201TYPE">جوابدہندہ کا رشتہ </string>
    <string name="MC_201AGE">جوابدہندہ کی عمر </string>
    <string name="MC_201EDU">جوابدہندہ کی تعلیم </string>
    <string name="MC_201OCU">جوابدہندہ کا پیشہ</string>
    <string name="MC_202NM">گھرانے کے سر براہ کا نام</string>
    <string name="MC_202GNDR">گھرانے کے سر براہ کی جنس</string>
    <string name="MC_202AGE">گھرانے کے سر براہ کی عمر </string>
    <string name="MC_202EDU">گھرانے کے سر براہ کی تعلیم </string>
    <string name="MC_202OCU">گھرانے کے سر براہ کا پیشہ</string>
    <string name="MC_203TOT">اس گھر میں آپ کے ساتھ اور کتنے افراد رہتے ہیں؟</string>
    <string name="MC_203M">اس گھر میں ٹوٹل مرد</string>
    <string name="MC_203F">اس گھر میں ٹوٹل عورتیں</string>
    <string name="MC_204T">اس گھر میں پانچ سال سے کم عمر کے کتنے بچے ہیں؟</string>
    <string name="MC_204M">اس گھر میں پانچ سال سے کم عمر کے لڑکے</string>
    <string name="MC_204F">اس گھر میں پانچ سال سے کم عمر کی بچییاں</string>
    <string name="MC_205YY"> یہاں کتنے عرصے سے رہائش پزیر ہیں؟ (سال) </string>
    <string name="MC_205MM">ایک سال سے کم ہوتو مہینوں میں لکھیں(مہینے )</string>
    <string name="MC_206">کیا اس گھر میں کوئی حاملہ خاتون ہے؟</string>
    <string name="MC_207_1W">گر ہاں تو حمل کی مدت ہفتوں میں</string>
    <string name="MC_207_1M">گر ہاں تو حمل کی مدت مہینوں میں </string>
    <string name="MC_207_2W">گر ہاں تو حمل کی مدت ہفتوں میں</string>
    <string name="MC_207_2M">گر ہاں تو حمل کی مدت مہینوں میں </string>
    <string name="MC_207_3W">گر ہاں تو حمل کی مدت ہفتوں میں</string>
    <string name="MC_207_3M">گر ہاں تو حمل کی مدت مہینوں میں </string>
    <string name="IM_FRMNO">فارم کا سیریل نمبر</string>
    <string name="IM_CHID">بچے کی آئ ڈی</string>
    <string name="IM_RESP">اگر جوابدہندہ بچے کی ماں ہے تو سرکل کریں</string>
    <string name="IM_A">بچے کا نام </string>
    <string name="IM_AF">بچے کے والد کا نام</string>
    <string name="IM_B">بچے کی جنس</string>
    <string name="IM_C">کارڈ موجود ہے یا نہیں  حفاظتی ٹیکوں کا</string>
    <string name="IM_D">بچے کی تاریخ پیدائش</string>
    <string name="IM_EY">عمر سال</string>
    <string name="IM_EM">عمر مہینے</string>
    <string name="IM_ED">عمر دن</string>
    <string name="IM_F">کیا  بچے کوپچھلے 6 ماہ کے دوران وٹامن اے کے قطرےپلا ئے گئے؟ </string>
    <string name="IM_G">کیا پچھلی مہم کے دوران بچے کو پولیو کے قطرے پلا ئےگئے؟</string>
    <string name="IM_H">کیا انگلی پر  EPI کا نشان موجود ہے؟   </string>
    <string name="IM_I">کیا بچے نے کبھی بھی پولیو کے قطرے پیئے ہیں</string>
    <string name="IM_J">کیاپچھلے 6 مہینے کے دوران آپ کے بچے کو پولیو    کاٹیکہ لگا ہے؟ </string>
    <string name="IM_JB">پولیو  کے ٹیکے کی sourceلکھیں</string>
    <string name="IM_K">بچے کو پولیو  کا ٹیکہ کہاں سے لگوایا ہے</string>
    <string name="BCG">BCG</string>
    <string name="BCG_SRC">BCG Source</string>
    <string name="BCG_SCAR">BCG Scar</string>
    <string name="OPV0">OPV 0</string>
    <string name="OPV0_SRC">OPV Source</string>
    <string name="P1">Penta 1</string>
    <string name="P1_SRC">Penta 1 Source</string>
    <string name="PCV1">PCV 1</string>
    <string name="PCV1_SRC">PCV 1 Source</string>
    <string name="OPV1">OPV 1</string>
    <string name="OPV1_SRC">OPV 1 Source</string>
    <string name="P2">Penta 2</string>
    <string name="P2_SRC">Penta 2 Source</string>
    <string name="PCV2">PCV 2</string>
    <string name="PCV2_SRC">PCV 2 Source</string>
    <string name="OPV2">OPV 2</string>
    <string name="OPV2_SRC">OPV 2 Source</string>
    <string name="P3">Penta 3</string>
    <string name="P3_SRC">Penta 3 Source</string>
    <string name="PCV3">PCV 3</string>
    <string name="PCV3_SRC">PCV 3 Source</string>
    <string name="OPV3">OPV 3</string>
    <string name="OPV3_SRC">OPV 3 Source</string>
    <string name="M1">Measles 1</string>
    <string name="M1_SRC">Measles 1 Source</string>
    <string name="M2">Measles 2</string>
    <string name="M2_SRC">Measles 2 Source</string>
    <string name="IM_M_D">Diarrhea</string>
    <string name="IM_M_A">ARI</string>
    <string name="MC_401">کیا آپ نے کبھی حفاظتی ٹیکوں کے بارے میں سنا ہے ؟]اگر جواب "نہیں" یا  " معلوم نہیں" ہوتو سوال4.04 پوچھیں ،ورنہ سوال 4.02 پوچھیں[</string>
    <string name="MC_402_1">آپ نے کن ذرائع سے حفاظتی ٹیکوں  کے بارے میں سنا ہے؟]ایک سے زیادہ جوابات آسکتے ہیں [ٹی-وی    </string>
    <string name="MC_402_2">آپ نے کن ذرائع سے حفاظتی ٹیکوں  کے بارے میں سنا ہے؟]ایک سے زیادہ جوابات آسکتے ہیں [ریڈیو </string>
    <string name="MC_402_3">آپ نے کن ذرائع سے حفاظتی ٹیکوں  کے بارے میں سنا ہے؟]ایک سے زیادہ جوابات آسکتے ہیں [اخبارات</string>
    <string name="MC_402_4">آپ نے کن ذرائع سے حفاظتی ٹیکوں  کے بارے میں سنا ہے؟]ایک سے زیادہ جوابات آسکتے ہیں [پوسٹر/بینر</string>
    <string name="MC_601">کیا آپ جانتے ہیں کہ آپ کے علاقے میں ماں اور بچوں کی بہتر صحت کے لیے TVI کی جانب سے مفت کیمپ لگائے جارہے ہیں؟</string>
    <string name="MC_602">کیاآپ اپنے علاقے میں لگنے والے  TVI  کیمپ میں گئے تھے ؟</string>
    <string name="MC_603_1">آپ   TVIکیمپ کیوں نہیں گئے تھے؟ وجہ بیان کریں .ماں اور بچہ بیمار نہیں تھے </string>
    <string name="MC_603_2">آپ  TVIکیمپ کیوں نہیں گئے تھے؟ وجہ بیان کریں .کیمپ دور تھا</string>
    <string name="MC_603_3">آپ  TVIکیمپ کیوں نہیں گئے تھے؟ وجہ بیان کریں . گھروالوں کی طرف سے اجازت نہیں تھی</string>
    <string name="MC_603_4">آپ  TVIکیمپ کیوں نہیں گئے تھے؟ وجہ بیان کریں  ہمارے پاس صحت کے حصول کے لیے موزوں انتظام موجود ہے </string>
    <string name="MC_603_5">آپ  TVIکیمپ کیوں نہیں گئے تھے؟ وجہ بیان کریں دیگر</string>
    <string name="MC_603_X1">آپ  TVIکیمپ کیوں نہیں گئے تھے؟ وجہ بیان کریں .دیگر (وضاحت کریں)</string>
    <string name="MC_604_1">آپ کو  TVIکیمپ کے بارے میں کہا ں سے معلوم ہوا؟  TVI کمیونٹی موبلائزر</string>
    <string name="MC_604_2">آپ کو  TVIکیمپ کے بارے میں کہا ں سے معلوم ہوا؟  یونیسف  کے کمیونٹی موبلائزر</string>
    <string name="MC_604_3">آپ کو  TVIکیمپ کے بارے میں کہا ں سے معلوم ہوا؟  فیملی کمیونٹی ورکر</string>
    <string name="MC_604_4">آپ کو  TVIکیمپ کے بارے میں کہا ں سے معلوم ہوا؟  پولیو ورکرز</string>
    <string name="MC_604_5">آپ کو  TVIکیمپ کے بارے میں کہا ں سے معلوم ہوا؟  لیڈی  ہیلتھ وزیٹرز(LHV)</string>
    <string name="MC_604_6">آپ کو  TVIکیمپ کے بارے میں کہا ں سے معلوم ہوا؟  لیڈی  ہیلتھ وزیٹرز(LHV)</string>
    <string name="MC_604_7">آپ کو  TVIکیمپ کے بارے میں کہا ں سے معلوم ہوا؟  ڈاکٹر</string>
    <string name="MC_604_8">آپ کو  TVIکیمپ کے بارے میں کہا ں سے معلوم ہوا؟  نرس</string>
    <string name="MC_604_9">آپ کو  TVIکیمپ کے بارے میں کہا ں سے معلوم ہوا؟  مسجد /علاقے میں اعلان سے </string>
    <string name="MC_605_1">آپTVI کیمپ کس مقصد کے لیے گئے تھے؟.بچے کےمعائنہ کے لیے</string>
    <string name="MC_605_2">آپTVI کیمپ کس مقصد کے لیے گئے تھے؟.ماں کےمعائنہ کے لئے</string>
    <string name="MC_605_3">آپTVI کیمپ کس مقصد کے لیے گئے تھے؟.بچے کے حفاظتی ٹیکوں کے لیے</string>
    <string name="MC_605_4">آپTVI کیمپ کس مقصد کے لیے گئے تھے؟.علاقے میں مرکز صحت نہ ہونے کی وجہ سے </string>
    <string name="MC_605_5">آپTVI کیمپ کس مقصد کے لیے گئے تھے؟.دیگر (وضاحت  کریں) </string>
    <string name="MC_606">کیا آپ کے بچے کو  TVI کیمپ میں حفاظتی ٹیکے لگے تھے؟</string>
    <string name="MC_607_1">آپ کے بچے کو  TVI کیمپ میں حفاظتی ٹیکے نہ لگنے کی کیا وجوہات تھی؟.حفاظتی ٹیکے دستیاب نہیں تھے</string>
    <string name="MC_607_2">آپ کے بچے کو  TVI کیمپ میں حفاظتی ٹیکے نہ لگنے کی کیا وجوہات تھی؟.ڈاکٹر نےمشورہ نہیں دیاتھا</string>
    <string name="MC_607_3">آپ کے بچے کو  TVI کیمپ میں حفاظتی ٹیکے نہ لگنے کی کیا وجوہات تھی؟.بچہ بیمار تھا</string>
    <string name="MC_607_4">آپ کے بچے کو  TVI کیمپ میں حفاظتی ٹیکے نہ لگنے کی کیا وجوہات تھی؟.بچے کو ہیلتھ کیمپ نہیں لے کر گئے تھے</string>
    <string name="MC_607_5">آپ کے بچے کو  TVI کیمپ میں حفاظتی ٹیکے نہ لگنے کی کیا وجوہات تھی؟.ٹیکہ لگانے سے انکار کردیا </string>
    <string name="MC_607_6">آپ کے بچے کو  TVI کیمپ میں حفاظتی ٹیکے نہ لگنے کی کیا وجوہات تھی؟.بہت زیادہ انتظار کرنا پڑا تھا </string>
    <string name="MC_607_7">آپ کے بچے کو  TVI کیمپ میں حفاظتی ٹیکے نہ لگنے کی کیا وجوہات تھی؟.حفاظتی ٹیکوں کا کورس مکمل تھا</string>
    <string name="MC_607A">کیا آپ کے کسی بھی بچے کو TVI  کیمپ میں پولیو کا ٹیکہ لگا تھا؟</string>
    <string name="MC_607B">پولیو کا ٹیکہ نہ لگنےکی کیا وجوہات تھیں؟</string>
    <string name="MC_607BX">پولیو کا ٹیکہ نہ لگنےکی کیا وجوہات تھیں؟ دیگر </string>
    <string name="MC_608_M1">ماں نے TVI کیمپ میں کون کون سی سہولتیں حاصل کی  (معائنہ)</string>
    <string name="MC_608_M2">ماں نے TVI کیمپ میں کون کون سی سہولتیں حاصل کی  (دوران حمل معائنہ)</string>
    <string name="MC_608_M3">ماں نے TVI کیمپ میں کون کون سی سہولتیں حاصل کی  (دوائیوں کی فراہمی)</string>
    <string name="MC_608_M4">ماں نے TVI کیمپ میں کون کون سی سہولتیں حاصل کی  (تشنج کا ٹیکہ)</string>
    <string name="MC_608_M5">ماں نے TVI کیمپ میں کون کون سی سہولتیں حاصل کی  (مزید علاج کے لیے دوسرے مرکز صحت جانے کا مشورہ دیا)</string>
    <string name="CF_Q1">معائنہ</string>
    <string name="CF_Q2">حفاظتی ٹیکے </string>
    <string name="CF_Q2_1">حفاظتی ٹیکے BCG -1</string>
    <string name="CF_Q2_2">حفاظتی ٹیکے Pentavalent -2</string>
    <string name="CF_Q2_3">حفاظتی ٹیکے PCV -3</string>
    <string name="CF_Q2_4">حفاظتی ٹیکے  -4خسرہ</string>
    <string name="CF_Q2_5">حفاظتی ٹیکے -5پولیو کے قطرے (OPV) </string>
    <string name="CF_Q2_6">حفاظتی ٹیکے -6پولیو کا ٹیکہ (IPV)</string>
    <string name="CF_Q3">دوائیوں کی فراہمی</string>
    <string name="CF_Q4">مزید علاج کے لیے دوسرے مرکز صحت جانے کا مشورہ دیا</string>
    <string name="MC_609">کیا آپ کے پاس TVI کے ہیلتھ کیمپ میں دیے جانے والا کارڈ موجود ہے؟</string>
    <string name="MC_610">اگر ہاں  تو جوابدہندہ سے کارڈ دکھانے کے لئے کہیں، مشاہدہ کریں، کیا آپ  نے کارڈ دیکھا؟</string>
    <string name="start_next_section">اگلا سیکشن</string>
</resources>