<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hassannaqvi.mccp2.MainActivity">

    <Button
        android:id="@+id/btn_fill_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="5dp"

        android:onClick="fillSurveyForm"
        android:text="@string/fill_form"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_edit_forms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="5dp"
        android:onClick="editStoredForm"
        android:text="@string/edit_forms"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_sync_forms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="5dp"
        android:onClick="syncForms"
        android:text="@string/sync_forms"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_delete_forms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="5dp"
        android:onClick="deleteForms"
        android:text="@string/delete_forms"
        android:textSize="24sp" />
</LinearLayout>